fix bug not allowing dropdown align well

--- a/06-building-a-program-start-to-finish/writing-html-js-css-outputs-(template)/output/src/styles/styles.css
+++ b/06-building-a-program-start-to-finish/writing-html-js-css-outputs-(template)/output/src/styles/styles.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 40px;
+  margin-right: 40px;
   position: relative;
 }
 
@@ -20,11 +20,15 @@ body {
   display: none;
 }
 
+.dropdown-menu {
+  width: 190px;
+}
+
 .nav-buttons {
   display: inline;
 }
 
-#littleAbout {
+#littleAboutButton {
   display: none;
 }
 
@@ -225,22 +229,22 @@ button {
   #dropdownSmall {
     display: inline;
     float: right;
-    color:
   }
 
   #dropdown {
+    border: none;
+    outline: 0;
     width: 30px;
     font-size: 1em;
     font-weight: 600;
     text-align: center;
   }
 
-  #littleAbout {
+  #littleAboutButton {
     background-color: #0094ce;
-    display: inline;
+    display: inline-block;
     float: right;
     margin-bottom: 10px;
-    margin-right: 5px;
   }
 
   #searchbox input#search {
